# medium

./: .flake8  .pre-commit-config.yaml  Manifest.toml  Project.toml  pyproject.toml  readme.md  requirements.txt
julia/: 2048.jl  control_flow_basics.txt  csv_part1.txt  csv_part2.txt  dataframes_basics.txt  dataframes_joins.txt  dataframes_poke.txt  epoch.jl  epoch_pluto.jl  estimate_pi.jl  estimate_pi_rand.jl  finish_sounds.jl  fizz_buzz_vectorized.txt  kmeans.jl  kmeans_from_scratch.txt  linear_regression_from_scratch.txt  memoize.jl  mergesort.jl  password_gen.jl  pluto_intro.jl  progress_notifications.jl  threadsx_parallel.jl
python/: pycaret_review.ipynb
tech/bigquery/: BigQuery_UDFs.ipynb  ML_with_Google_BigQuery_Kaggle_Titanic_end_to_end.ipynb  kaggle_titanic.ipynb
tech/bigquery/benchmarks/: bigquery_load_benchmarks.ipynb  file_loads.ipynb  file_loads.py
tech/bigquery/file_loads/: bq_file_loads.py  cli_steps.sh
tech/bigquery/scripting/: scripting_in_bq.md
